added new notes

--- a/Docker/Multi-Container-Compose.ipynb
+++ b/Docker/Multi-Container-Compose.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "#### ports: The example in our Compose file tells Docker to map port 8080 inside the container (target) to port 5001 on the host (published). This means traffic hitting the Docker host on port 5001 will be directed to port 8080 on the container. The app inside the container listens on port 8080.\n",
     "\n",
-    "#### networks: Tells Docker which network to attach the service’s containers to. The network should already exist or be defined in the networks top-level key. If it’s an overlay network, it will need to have the attachable flag so that standalone containers can be attached to it (Compose deploys standalone containers instead of Docker Services)."
+    "#### networks: Tells Docker which network to attach the service’s containers to. The network should already exist or be defined in the networks top-level key. If it’s an overlay network, it will need to have the attachable flag so that standalone containers can be attached to it (Compose deploys standalone containers instead of Docker Services).\n",
+    "\n",
+    "#### volumes: Tells Docker to mount the counter-vol volume (source:) to /app (target:) inside the container. The counter-vol volume needs to already exist or be defined in the volumes top-level key in the file."
    ]
   },
   {
