added new models

--- a/Docker/Multi-Container-Compose.ipynb
+++ b/Docker/Multi-Container-Compose.ipynb
@@ -42,6 +42,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### docker compose up is the most common way to bring up a Compose app. It builds or pulls all required images, creates all required networks and volumes, and starts all required containers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deploying apps with Compose - The commands\n",
+    "\n",
+    "- docker compose up is the command to deploy a Compose app. It creates all images, containers, networks and volumes needed by the app. It expects the Compose file to be called compose.yaml but you can specify a custom filename with the -f flag. It’s common to start the app in the background with the --detach flag.\n",
+    "- docker compose stop will stop all containers in a Compose app without deleting them from the system. They can be easily restarted with docker compose restart.\n",
+    "- docker compose rm will delete a stopped Compose app. It will delete containers and networks, but it won’t delete volumes and images by default.\n",
+    "- docker compose restart will restart a Compose app that has been stopped with docker compose stop. If you make changes to your Compose app while it’s stopped, these changes will not appear in the restarted app. You need to re-deploy the app to get the changes.\n",
+    "- docker compose ps lists each container in the Compose app. It shows current state, the command running inside each container, and network ports.\n",
+    "- docker compose down will stop and delete a running Compose app. It deletes containers and networks, but not volumes and images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
