added new networks

--- a/Docker/Networking.ipynb
+++ b/Docker/Networking.ipynb
@@ -36,7 +36,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Port mappings let you map a container to a port on the Docker host. Any traffic hitting the Docker host on the configured port will be re-directed to the container. The high-level flow is shown in Figure 11.10\n",
+    "\n",
+    "#### In the diagram, the application running in the container is operating on port 80. This is mapped to port 5001 on the host’s 10.0.0.15 interface. The result is all traffic hitting the host on 10.0.0.15:5001 being redirected to the container on port 80.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
