added new notes

--- a/Mathematics/Statistics/Stats-Done-Wrong/Stat-Power-Underpower.ipynb
+++ b/Mathematics/Statistics/Stats-Done-Wrong/Stat-Power-Underpower.ipynb
@@ -17,6 +17,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Remember that “statistically insignificant” does not mean “zero.” Even if your result is insignificant, it represents the best available estimate given the data you have collected. “Not significant” does not mean “nonexistent.”\n",
+    "\n",
+    "#### Look skeptically on the results of clearly underpowered studies. They may be exaggerated due to truth inflation.\n",
+    "\n",
+    "#### Use confidence intervals to determine the range of answers consistent with your data, regardless of statistical significance.\n",
+    "\n",
+    "#### When comparing groups of different sizes, compute confidence intervals. These will reflect the additional certainty you have in larger groups."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
