--- a/Mathematics/Statistics/Stats-Done-Wrong/Pseudoreplication.ipynb
+++ b/Mathematics/Statistics/Stats-Done-Wrong/Pseudoreplication.ipynb
@@ -10,6 +10,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### This problem is known as pseudoreplication, and it is quite common.1 For instance, after testing cells from a culture, a biologist might “replicate” his results by testing more cells from the same culture. Or a neuroscientist might test multiple neurons from the same animal, claiming to have a large sample size of hundreds of neurons from just two rats. A marine biologist might experiment on fish kept in aquariums, forgetting that fish sharing a single aquarium are not independent: their conditions may be affected by one another, as well as the tested treatment.2 If these experiments are meant to reveal trends in rats or fish in general, their results will be misleading."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
