added new chapter

--- a/Mathematics/Statistics/Stats-Done-Wrong/Pseudoreplication.ipynb
+++ b/Mathematics/Statistics/Stats-Done-Wrong/Pseudoreplication.ipynb
@@ -17,6 +17,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- Ensure that your statistical analysis really answers your research question. Additional measurements that are highly dependent on previous data do not prove that your results generalize to a wider population—they merely increase your certainty about the specific sample you studied.\n",
+    "\n",
+    "- Use statistical methods such as hierarchical models and clustered standard errors to account for a strong dependence between your measurements.\n",
+    "\n",
+    "- Design experiments to eliminate hidden sources of correlation between variables. If that’s not possible, record confounding factors so they can be adjusted for statistically. But if you don’t consider the dependence from the beginning, you may find there is no way to save your data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
