added new notes

--- a/Mathematics/Statistics/Stats-Done-Wrong/Base-Rate.ipynb
+++ b/Mathematics/Statistics/Stats-Done-Wrong/Base-Rate.ipynb
@@ -19,6 +19,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- Compare groups directly using appropriate statistical tests, instead of simply saying, “This one was significant, and this one wasn’t.”\n",
+    "\n",
+    "- Do not judge the significance of a difference by eye. Use a statistical test.\n",
+    "\n",
+    "- Remember that if you compare many groups, you need to adjust for making multiple comparisons!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
