added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -17,10 +17,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### This addition rule applies only to combinations of mutually exclusive outcomes. In probabilistic terms, mutually exclusive means that:\n",
+    "\n",
+    "- P(A) AND P(B) = 0\n",
+    "\n",
+    "#### That is, the probability of getting both A AND B together is 0. We see that this holds for our examples:\n",
+    "\n",
+    "- It is impossible to flip one coin and get both heads and tails.\n",
+    "- It is impossible to roll both a 1 and a 2 on a single roll of a die.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
