added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -34,7 +34,20 @@
     "#### The trouble is that flipping a heads and rolling a 6 are not mutually exclusive. As we know from earlier in the chapter, P(heads, six) = 1/12. Because the probability of both events happening at the same time is not 0, we know they are, by definition, not mutually exclusive.\n",
     "\n",
     "#### The reason that adding our probabilities doesn’t work for non–mutually exclusive events is that doing so doubles the counting of events where both things happen. As an example of overcounting.\n",
-    "\n"
+    "\n",
+    "#### To correct our probabilities, we must add up all of our probabilities and then subtract the probability of both events occurring. This leads us to the rule for combining non–mutually exclusive probabilities with OR, known as the sum rule of probability:\n",
+    "\n",
+    "- P(A) OR P(B) = P(A) + P(B) – P(A,B)\n",
+    "\n",
+    "#### We add the probability of each event happening and then subtract the probability of both events happening, to ensure we are not counting these probabilities twice since they are a part of both P(A) and P(B). So, using our die roll and coin toss example, the probability of rolling a number equal to 6 or flipping a heads is:\n",
+    "\n",
+    "#### he next important logical rule involves combining two probabilities with AND. We do this using the product rule, which simply states that to get the probability of two events occurring together, P(A) and P(B), we just multiply them together:\n",
+    "\n",
+    "- P(A,B) = P(A) × P(B)\n",
+    "\n",
+    "##### The final rule involves combining probabilities with OR using the sum rule. The tricky part of the sum rule is that if we add non–mutually exclusive probabilities, we’ll end up overcounting for the case where they both occur, so we have to subtract the probability of both events occurring together. The sum rule uses the product rule to solve this (remember, for mutually exclusive events, P(A, B) = 0):\n",
+    "\n",
+    "- P(A OR B) = P(A) + P(B) – P(A,B)"
    ]
   },
   {
