--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -53,7 +53,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Exercise 1: What is the probability of rolling a 20 three times in a row on a 20-sided die?\n",
+    "\n",
+    "- 1/20 * 1/20 * 1/20 = 1/8000"
+   ]
   }
  ],
  "metadata": {
