--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -56,7 +56,16 @@
    "source": [
     "## Exercise 1: What is the probability of rolling a 20 three times in a row on a 20-sided die?\n",
     "\n",
-    "- 1/20 * 1/20 * 1/20 = 1/8000"
+    "- 1/20 * 1/20 * 1/20 = 1/8000\n",
+    "\n",
+    "## Independent Events\n",
+    "#### Independent events are those where the outcome of one event does not affect the outcome of another. In your case, each roll of a 20-sided die is independent because the result of one roll does not influence or change the probability of outcomes on subsequent rolls. Each roll has the same probability of landing a 20, regardless of the results of previous rolls.\n",
+    "\n",
+    "## Mutually Exclusive Events\n",
+    "#### Mutually exclusive events, on the other hand, are events that cannot happen at the same time. For example, rolling a 20 and rolling a 15 on the same single roll of a die are mutually exclusive because both outcomes cannot occur simultaneously.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
