added new problem

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -62,16 +62,45 @@
     "#### Independent events are those where the outcome of one event does not affect the outcome of another. In your case, each roll of a 20-sided die is independent because the result of one roll does not influence or change the probability of outcomes on subsequent rolls. Each roll has the same probability of landing a 20, regardless of the results of previous rolls.\n",
     "\n",
     "## Mutually Exclusive Events\n",
-    "#### Mutually exclusive events, on the other hand, are events that cannot happen at the same time. For example, rolling a 20 and rolling a 15 on the same single roll of a die are mutually exclusive because both outcomes cannot occur simultaneously.\n",
-    "\n",
-    "\n",
-    "\n"
+    "#### Mutually exclusive events, on the other hand, are events that cannot happen at the same time. For example, rolling a 20 and rolling a 15 on the same single roll of a die are mutually exclusive because both outcomes cannot occur simultaneously."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2: The weather report says there’s a 10 percent chance of rain tomorrow, and you forget your umbrella half the time you go out. What is the probability that you’ll be caught in the rain without an umbrella tomorrow?\n",
+    "\n",
+    "- P(rain) = 0.10%\n",
+    "- P(Not rain) = 1 - P(rain) = 0.90%\n",
+    "- P(You Forget Your Umbrella) = 0.50%\n",
+    "\n",
+    "#### What is the probability you will be in the rain without an umbrella? \n",
+    "\n",
+    "#### P(A) + P(B) - P(A N B)\n",
+    "- P(rain) + P(Forgot Umbrella) - P(Umbrella N Rain) = (0.10) + (0.50) - (0.10 * 0.50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
