added new models

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -77,22 +77,22 @@
     "\n",
     "#### What is the probability you will be in the rain without an umbrella? \n",
     "\n",
-    "#### P(A) + P(B) - P(A N B)\n",
-    "- P(rain) + P(Forgot Umbrella) - P(Umbrella N Rain) = (0.10) + (0.50) - (0.10 * 0.50)"
+    "#### P(A) *  P(B)\n",
+    "- P(rain) * P(Forgot Umbrella) - P(Umbrella N Rain) = (0.10 * 0.50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5499999999999999"
+       "0.05"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,8 +100,7 @@
    "source": [
     "rain = 0.10\n",
     "umbrella = 0.50\n",
-    "\n",
-    "rain + umbrella - (rain * umbrella)"
+    "(rain * umbrella)"
    ]
   },
   {
