added new problem

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -111,6 +111,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### P(No Salmonella in one egg) = 1- 1/20000 = 19999/20000\n",
+    "\n",
+    "#### Probability of neither of the two eggs having salmonella (assuming independence between the eggs): 19999/20000 * 19999/20000\n",
+    "\n",
+    "#### P(At least one egg has salmonella) = 1- P(no salmonella in either egg) = 1 - (19999/20000)**2\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
