added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -123,11 +123,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4: What is the probability of either flipping two heads in two coin tosses or rolling three 6s in three six-sided dice rolls?\n",
+    "\n",
+    "#### P(2 Heads) = 1/2 * 1/2 = 1/4\n",
+    "#### P(Three 6's) = 1/6 * 1/6 * 1/6 = 1/216\n",
+    "\n",
+    "#### P(two heads n three 6s) (1/4) * (1/216) = 1/864\n",
+    "\n",
+    "#### Formula = P(A) + P(B) * P(A N B) = 1/4 + 1/216 - (1/864)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##"
+   ]
   }
  ],
  "metadata": {
