added new problems

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Uncertainity.ipynb
@@ -138,12 +138,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25347222222222227"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heads = 1/4\n",
+    "dice = 1/216\n",
+    "\n",
+    "heads + dice - (heads * dice)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##"
-   ]
+   "source": []
   }
  ],
  "metadata": {
