added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -21,6 +21,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Each of these problems shares a similar structure. Indeed, all binomial distributions involve three parameters:\n",
+    "\n",
+    "- k The number of outcomes we care about\n",
+    "\n",
+    "- n The total number of trials\n",
+    "\n",
+    "- p The probability of the event happening"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
