added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -25,10 +25,14 @@
     "#### Each of these problems shares a similar structure. Indeed, all binomial distributions involve three parameters:\n",
     "\n",
     "- k The number of outcomes we care about\n",
-    "\n",
     "- n The total number of trials\n",
+    "- p The probability of the event happening\n",
     "\n",
-    "- p The probability of the event happening"
+    "#### These parameters are the inputs to our distribution. So, for example, when we’re calculating the probability of flipping two heads in three coin tosses:\n",
+    "\n",
+    "- k = 2, the number of events we care about, in this case flipping a heads\n",
+    "- n = 3, the number times the coin is flipped\n",
+    "- p = 1/2, the probability of flipping a heads in a coin toss"
    ]
   },
   {
