added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -32,7 +32,9 @@
     "\n",
     "- k = 2, the number of events we care about, in this case flipping a heads\n",
     "- n = 3, the number times the coin is flipped\n",
-    "- p = 1/2, the probability of flipping a heads in a coin toss"
+    "- p = 1/2, the probability of flipping a heads in a coin toss\n",
+    "\n",
+    "#### For the example of three coin tosses, we would write B(2; 3, 1/2). The B is short for binomial distribution. Notice that the k is separated from the other parameters by a semicolon. This is because when we are talking about a distribution of values, we usually care about all values of k for a fixed n and p. So B(k; n, p) denotes each value in our distribution, but the entire distribution is usually referred to by simply B(n, p)."
    ]
   },
   {
