added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -40,6 +40,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### There is a special operation in combinatorics, called the binomial coefficient, that represents counting the number of ways we can select k from n—that is, selecting the outcomes we care about from the total number of trials. The notation for the binomial coefficient looks like this:\n",
+    "\n",
+    "(\n",
+    " n\n",
+    " k\n",
+    "  )\n",
+    "\n",
+    "  #### We read this expression as “n choose k.” So, for our example, we would represent “in three tosses choose two heads” as:\n",
+    "\n",
+    "  #### ( 3  2 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
