answered new question

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -77,6 +77,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Exercise 2:\n",
+    "#### There are four aces in a deck of 52 cards. If you pull a card, return the card, then reshuffle and pull a card again, how many ways can you pull just one ace in five pulls?\n",
+    "\n",
+    "#### n = 5, k = 1, p = 4/52 = 1/13"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
