--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -94,6 +94,40 @@
     "\n",
     "#### n = 10, k = 5, p = 1/13"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0004548552879040865"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "\n",
+    "n = 10\n",
+    "k = 5\n",
+    "p = 1/13\n",
+    "\n",
+    "probability = binom.pmf(k, n, p)\n",
+    "probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -103,7 +137,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
