added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -132,25 +132,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.27525120000000014"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4232832000000001\n"
+     ]
     }
    ],
    "source": [
-    "k = 2\n",
+    "zero_offer = 0\n",
+    "one_offer = 1\n",
     "p = 1/5\n",
     "n = 7\n",
-    "binom.pmf(k,n, p)"
+    "\n",
+    "prob_zero_offers = binom.pmf(zero_offer, n, p)\n",
+    "prob_1_offer = binom.pmf(one_offer, n, p)\n",
+    "atleast_2offers = 1 - (prob_zero_offers + prob_1_offer)\n",
+    "\n",
+    "print(atleast_2offers)\n"
    ]
   },
   {
