added new changes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
     "prob_1_offer = binom.pmf(one_offer, n, p)\n",
     "atleast_2offers = 1 - (prob_zero_offers + prob_1_offer)\n",
     "\n",
-    "print(atleast_2offers)\n"
+    "print(atleast_2offers)"
    ]
   },
   {
