added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -167,6 +167,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7287940935386334\n"
+     ]
+    }
+   ],
+   "source": [
+    "zero_offer = 0\n",
+    "one_offer = 1\n",
+    "p = 1/10\n",
+    "n = 25\n",
+    "\n",
+    "prob_zero_offers = binom.pmf(zero_offer, n, p)\n",
+    "prob_1_offer = binom.pmf(one_offer, n, p)\n",
+    "atleast_2offers = 1 - (prob_zero_offers + prob_1_offer)\n",
+    "\n",
+    "print(atleast_2offers)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
